<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="284dp"
            android:layout_height="290dp"
            android:src="@drawable/home_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/header_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_home_header_name"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/header_location"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/label_home_header_location"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="201dp"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingTop="15dp" >

                <TextView
                    android:id="@+id/header_contact_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_home_header_contact_1"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_home_header_separator"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/header_contact_2"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_home_header_contact_2"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>